# FireWall

./: .gitignore  CMakeLists.txt  Makefile
Data/: patches.txt  viruses.txt
sajdoann/: Doxyfile  Makefile  README.md  prohlaseni.txt  zadani.txt
sajdoann/Data/: Ahoj.txt  board.txt  boardWithObj.txt  input_specification.txt  patches.txt  tmp.txt  vezicky  viruses.txt
sajdoann/Data/Default/: board.txt  gameInfo.txt  patches.txt  podminky  score.txt  viruses.txt
sajdoann/Data/Saves/corrupted/: board.txt  patches.txt
sajdoann/Data/Saves/ddd/: board.txt  patches.txt  score.txt
sajdoann/Data/Saves/maze/: score.txt
sajdoann/Data/Saves/medium/: board.txt  patches.txt
sajdoann/Data/Saves/naRozbiti/: board.txt  viruses.txt
sajdoann/Data/Saves/rozbita/: score.txt  viruses.txt
sajdoann/Data/Saves/upAndDownWalls/: board.txt  score.txt
sajdoann/data/: jmena.txt
sajdoann/data/Default/: patches.txt  score.txt  viruses.txt
sajdoann/data/Default/BigDiagonal/: board.txt  patches.txt  score.txt
sajdoann/data/Default/BuilderMaze/: board.txt  score.txt
sajdoann/data/Default/MediumBasic/: board.txt
sajdoann/data/Default/MediumMed/: viruses.txt
sajdoann/data/Default/MediumSuperEasy/: patches.txt  score.txt  viruses.txt
sajdoann/data/Default/SmallBasic/: board.txt  patches.txt  score.txt  viruses.txt
sajdoann/data/Default/SmallBasicEasy/: board.txt  score.txt  viruses.txt
sajdoann/data/Default/maze/: board.txt  patches.txt  score.txt  viruses.txt
sajdoann/data/Saves/BigDiagonalInPlay/: patches.txt  score.txt
sajdoann/data/Saves/done/: patches.txt  score.txt  viruses.txt
sajdoann/data/Saves/fullCollumn/: board.txt  patches.txt  score.txt
sajdoann/data/Saves/maze/: board.txt  patches.txt
sajdoann/data/Saves/medium/: patches.txt  score.txt
sajdoann/data/Saves/naRozbiti/: board.txt  patches.txt  score.txt
sajdoann/data/Saves/rozbita/: patches.txt
sajdoann/src/: App.cpp  App.h  Color.h  Command.h  CommandEndType.h  Commands.cpp  Commands.h  CommandsConstants.h  Commands_Constants.cpp  Commands_Constants.h  Game_Constants.h  Interface.cpp  Interface.h  InterfaceConstants.h  Interface_Constants.cpp  Interface_Constants.h  Messages.h  PathsConstants.h  README.md  constants.h  main.cpp  notes.txt
sajdoann/src/Board/: Board.cpp  Board.h
sajdoann/src/Game/: Game.cpp  Game.h  GameConstants.cpp  GameConstants.h  ResultEnum.h  ScoreCounter.cpp  ScoreCounter.h  State.enum  State_Enum.h  VirusWave.h
sajdoann/src/Game/Board/: Board.cpp  Board.h
sajdoann/src/Game/IOLoaders/: Reader.cpp  Reader.h  Writer.cpp  Writer.h
sajdoann/src/Game/Movement/: Movement.cpp  Movement.h  MovementDirection.h  MovementFunction.h  MovementType.h
sajdoann/src/Game/Objects/: Coords.cpp  Coords.h  Empty.cpp  Empty.h  Hotfix.cpp  Hotfix.h  Object.h  (+7 more)
sajdoann/src/IOLoaders/: Reader.h  Writer.h
sajdoann/src/Movement/: Movement.h  MovementDirection.h  MovementFunction.h  MovementType.h
sajdoann/src/Objects/: Coords.h  Empty.h  Hotfix.h  MovementType.enum  MovingInterface.h  MovingObject.h  Object.h  ObjectWithMoveAttributes.h  Patch.h  ShootingPatch.txt  Virus.h
src/: App.cpp  App.h  Command.h  CommandEndType.h  Interface.h  Messages.h  README.txt  main.cpp
src/Board/: Board.h
src/Game/: Game.cpp  Game.h  GameResult.enum  GameState.enum  Result.enum  State.enum
src/Objects/: AbstractObject.h  Coords.h  Empty.h  MovingObject.h  Object.h  Patch.h  Virus.h
src/Readers/: AbstractReader.h  Reader.h
tests/: towers.txt
(+10 files in other folders)
